feat: domain-model spec
