# specs/openapi-spec.yaml
@@ -2145,6 +2145,10 @@ components:
       properties:
         id:
           type: string
+        roles:
+          type: array
+          items:
+            $ref: '#/components/schemas/GroupRole'
         firstName:
           type: string
         lastName:
@@ -2169,6 +2173,7 @@ components:
             $ref: '#/components/schemas/Guardian'
       required:
         - id
+        - roles
         - firstName
         - lastName
         - level
@@ -2216,6 +2221,10 @@ components:
       properties:
         id:
           type: string
+        roles:
+          type: array
+          items:
+            $ref: '#/components/schemas/GroupRole'
         firstName:
           type: string
         lastName:
@@ -2226,6 +2235,7 @@ components:
           nullable: true
       required:
         - id
+        - roles
         - firstName
         - lastName
     Guardian:
@@ -2233,6 +2243,10 @@ components:
       properties:
         id:
           type: string
+        roles:
+          type: array
+          items:
+            $ref: '#/components/schemas/GroupRole'
         groupId:
           type: string
         firstName:
@@ -2248,6 +2262,10 @@ components:
       required:
         - id
         - groupId
+        - roles
+    GroupRole:
+      type: string
+      enum: [admin, trainer, guardian, player]
     CreateGuardianRequest:
       type: object
       properties:
@@ -2264,23 +2282,9 @@ components:
     PlayerWithRole:
       allOf:
         - $ref: '#/components/schemas/Player'
-        - type: object
-          properties:
-            role:
-              type: string
-              enum: [player]
-          required:
-            - role
     TrainerWithRole:
       allOf:
         - $ref: '#/components/schemas/Trainer'
-        - type: object
-          properties:
-            role:
-              type: string
-              enum: [trainer]
-          required:
-            - role
     CreatePlayerRequest:
       type: object
       properties:
